feat: create components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
+<app-header></app-header>
 <main>
-  <h1>
+  <h2>
     Ola, Angular!
-  </h1>
+  </h2>
 </main>
+<app-footer></app-footer>
 
 <router-outlet />
