feat: route navigation

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,8 @@
 <header>
-    <h1>O Inicio de tudo!</h1>
-    <p>Sempre começa do sangue</p>
+    <nav>
+        <ul>
+            <li><a routerLink="/" routerLinkActive="active">Home</a></li>
+            <li><a routerLink="/contatos" routerLinkActive="active">Contatos</a></li>
+        </ul>
+    </nav>
 </header>
