--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
     <h1>Home</h1>
     <p>{{ example }}</p>
 
-   <app-cards *ngFor="let user of userList"
+   <app-cards *ngFor="let user of getUserList()"
    [name]="user.name"
    [email]="user.email"
    [job]="user.job"></app-cards>
